--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -116,58 +116,63 @@ layout: default
       <h2>Frequently Asked Questions</h2>
     </div>
   </div>
-
   <div class="row">
-    <div class="col-md-4">
-      <br />
-      <b>Where is it? </b> <br />
-      George Sherman Union, 2nd Floor in Metcalf Hall at 775 Commonwealth Avenue, Boston, MA, 02215.
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>Who's coming? </b> <br />
-      We expect 400 to 450 hackers from all over North America to attend BostonHacks.
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>Who can attend? </b> <br />
-      All students are welcome. Unfortunately, we will not be able to accommodate students under 18 this year (unless you are a BU student).
-    </div>
-  </div>
+    <div class="col-md-10 offset-md-1">
 
-  <div class="row">
-    <div class="col-md-4">
-      <br />
-      <b>Do I need experience? </b> <br />
-      No experience necessary. We will have plenty of mentors and resources, along with several workshops targeted for beginners. Come learn and experience your first hackathon at BostonHacks!
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>Are there any rules? </b> <br />
-      We want to ensure a positive experience for all participants. We encourage you to read the Code of Conduct.
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>What should I bring? </b> <br />
-      You should bring your laptop, phone, chargers, toiletries, and optionally a sleeping bag. All food and other accommodations will be taken care of.
-    </div>
-  </div>
+      <div class="row">
+        <div class="col-md-4">
+          <br />
+          <b>Where is it? </b> <br />
+          George Sherman Union, 2nd Floor in Metcalf Hall at 775 Commonwealth Avenue, Boston, MA, 02215.
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>Who's coming? </b> <br />
+          We expect 400 to 450 hackers from all over North America to attend BostonHacks.
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>Who can attend? </b> <br />
+          All students are welcome. Unfortunately, we will not be able to accommodate students under 18 this year (unless you are a BU student).
+        </div>
+      </div>
 
-  <div class="row">
-    <div class="col-md-4">
-      <br />
-      <b>Can we form teams?</b> <br />
-      Of course you can! We encourage people to work in teams of up to 5 people. You may opt-in to team formation during registration which will match you with an ideal team. You can work alone, but it won't be the same.
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>Does it cost anything?</b> <br/ >
-      BostonHacks is 100% free. You don't have to spend a dime!
-    </div>
-    <div class="col-md-4">
-      <br />
-      <b>Will there be travel reimbursements? </b> <br />
-      We're handling travel reimbursements on a case-by-case basis. We're also working on potentially providing busses to regions like New York and Canada.
+      <div class="row">
+        <div class="col-md-4">
+          <br />
+          <b>Do I need experience? </b> <br />
+          No experience necessary. We will have plenty of mentors and resources, along with several workshops targeted for beginners. Come learn and experience your first hackathon at BostonHacks!
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>Are there any rules? </b> <br />
+          We want to ensure a positive experience for all participants. We encourage you to read the Code of Conduct.
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>What should I bring? </b> <br />
+          You should bring your laptop, phone, chargers, toiletries, and optionally a sleeping bag. All food and other accommodations will be taken care of.
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <br />
+          <b>Can we form teams?</b> <br />
+          Of course you can! We encourage people to work in teams of up to 5 people. You may opt-in to team formation during registration which will match you with an ideal team. You can work alone, but it won't be the same.
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>Does it cost anything?</b> <br/ >
+          BostonHacks is 100% free. You don't have to spend a dime!
+        </div>
+        <div class="col-md-4">
+          <br />
+          <b>Will there be travel reimbursements? </b> <br />
+          We're handling travel reimbursements on a case-by-case basis. We're also working on potentially providing busses to regions like New York and Canada.
+        </div>
+      </div>
+      
     </div>
   </div>
 
