--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container-fluid text-center"> 
+<div class="container-fluid text-center">
 
   <div class="row">
     <div class="col-md-2 offset-md-5">
@@ -10,7 +10,7 @@ layout: default
     </div>
   </div>
 
-  <div class="row"> 
+  <div class="row">
     <div class="col-md-6 offset-md-3">
       <h1>{{site.nextHackathon.name}}</h1>
       <p>
@@ -20,14 +20,14 @@ layout: default
       </p>
 
       <br />
-      
+
       <button data-toggle="collapse" data-target="#attendSection" class="btn btn-primary btn-lg">
         Attend
       </button>
 
       <div id="attendSection" class="collapse">
         <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
-        <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="https://bostonhacks.us18.list-manage.com/subscribe/post?u=f6d6fee90aa63339dffc8ccca&amp;id=8873714a91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll form-group">
             <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
             <br />
@@ -63,7 +63,7 @@ layout: default
     </div>
   </div>
 
-  <div class="row text-left"> 
+  <div class="row text-left">
     <div class="col-md-4 offset-md-2">
       <h4>Saturday</h4>
       <hr />
